--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div id="choice-block">
         <div id="knife-choice" class="choice">
-            <img src="images/knife.png" alt="rock" />
+            <img src="/images/knife.png" alt="rock" />
         </div>
         <div id="gun-choice" class="choice">
             <img src="images/gun.png" alt="scissors" />
